--- a/idex.html
+++ b/idex.html
@@ -2,7 +2,7 @@
 <html lang="en">
     
   <head>
-    <meta charset="utp-8">
+    <meta charset="utf-8">
     <title>Odin-Recipes</title>
   </head>
   
@@ -11,6 +11,7 @@
     <ul>
     <li><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
     <li><a href="./recipes/brownies.html">Brownie Recipe</a></li>
+    <li><a href="./recipes/french-toast.html" >French Toast Recipe</a></li>
     </ul>
   </body>
 
